[project]
name = "RoboCivix"
description = "RoboCivix Python client."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Nanw1103" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "RoboCivix"
]

dynamic = ["version", "dependencies"]

[project.scripts]
hcs = "robocivix.cli.main:main"

[project.urls]
Homepage = "https://robocivix.github.io
"Bug Tracker" = "https://github.com/robocivix/robocivix-py/issues"
documentation = "https://readthedocs.org"
repository = "https://github.com/robocivix/robocivix-py
changelog = "https://github.com/robocivix/robocivix-py/blob/main/CHANGELOG.md"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''
